<resources>
    <string name="app_name">Menu</string>
    <string name="question">¿What would you like to order today?</string>
    <string name="dish1">Aji gallina</string>
    <string name="dish2">Ocopa</string>
    <string name="dish3">Sopa</string>
    <string name="txtOrder">Order</string>
    <string name="txtOrdered">order:</string>
    <string name="txtNoSelect">Please select onea least </string>
</resources>
