<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="360dp"
        android:layout_height="25dp"
        android:text="@string/question"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <RadioGroup
        android:id="@+id/rbOrderGroup"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="24dp"
        android:tag="yretyrty"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        tools:layout_editor_absoluteX="0dp">

        <RadioButton
            android:id="@+id/rbDish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dish1" />

        <RadioButton
            android:id="@+id/rbDish2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dish2" />

        <RadioButton
            android:id="@+id/rbDish3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dish3" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="ordenar"
        android:text="@string/txtOrder"
        app:layout_constraintTop_toBottomOf="@+id/rbOrderGroup"
        tools:layout_editor_absoluteX="148dp" />

    <TextView
        android:id="@+id/txtOrdered"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrder"
        app:layout_constraintVertical_bias="0.123" />

</android.support.constraint.ConstraintLayout>